# pricing-amazon-products

./: .gitignore  README.md  gradio_app.py  pyproject.toml
app/: ui.py  utils.py
data/raw/: README.md
research/notebooks/: 01_eda_and_preprocessing.ipynb  02_classical_models.ipynb  03_llm_models.ipynb  04_models_comparison.ipynb
src/pricing_amazon_products/: config.py  embeddings.py  experiments.py  fine_tuning.py  inference.py  io.py  plotting.py  preprocessing.py
