[project]
name = "pricing-amazon-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.49.2",
    "catboost>=1.2.10",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "gradio>=6.19.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "lightgbm>=4.6.0",
    "litellm>=1.89.1",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "trl>=1.6.0",
    "wandb>=0.27.2",
    "weave>=0.52.43",
    "wordcloud>=1.9.6",
]
